--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <div class="container">
-      <a href="https://funny-croissant-22db3e.netlify.app"> My site </a>
+      <a href="https://github.com/DaryBena/Weather-App-HomeWork"> My site </a>
       <form id="city-form">
         <input type="text" placeholder="Enter your city" id="city-input" />
         <input type="submit" value="submit" />
