--- a/index.html
+++ b/index.html
@@ -11,63 +11,87 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="style.css" />
     <script
       src="https://kit.fontawesome.com/5ebd870a2b.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css" />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <title>Weather App</title>
   </head>
   <body>
     <div class="container">
-      <a href="https://github.com/DaryBena/Weather-App-HomeWork"> My site </a>
-      <form id="city-form">
-        <input type="text" placeholder="Enter your city" id="city-input" />
-        <input type="submit" value="submit" />
-      </form>
-      <div class="row">
-        <div class="col">
-          <h1 id="city">Kyiv</h1>
-          <br />
-          <h2 id="data">8 august</h2>
-          <br />
-          <h3 id="time">16:15</h3>
-        </div>
-        <div class="col"><span id="temp">23</span>*C</div>
-        <div class="col">Sun <i class="fa-solid fa-sun sun-icon"></i></div>
-      </div>
-      <div class="humidity">
-        Humidity <span id="humid">75</span> %
-        <i class="fa-solid fa-raindrops drops-icon"></i>
-      </div>
-      <div class="wind">
-        Wind <span id="windValue">4</span> km\h NW
-        <i class="fa-regular fa-down-right wind-icon"></i>
-      </div>
-      <div class="row">
-        <div class="col">
-          <div class="sun">
-            sunrise 5:35 <i class="fa-solid fa-sunrise"></i>
-            <br />
-            sunset 20:31 <i class="fa-solid fa-sunset"></i>
+      <div class="weather-app-wrapper">
+        <div class="weather-app">
+          <form id="city-form" class="mb-3">
+            <div class="row">
+              <div class="col-9">
+                <input
+                  type="search"
+                  placeholder="Enter your city"
+                  class="form-control"
+                  id="city-input"
+                  autocomplete="off"
+                />
+              </div>
+              <div class="col-3">
+                <input
+                  type="submit"
+                  value="Search"
+                  class="btn btn-primary w-100"
+                />
+              </div>
+            </div>
+          </form>
+          <div class="row">
+            <div class="col-3">
+              <div class="overview">
+                <h1 id="city">Kyiv</h1>
+                <ul>
+                  <li id="date">8 august</li>
+
+                  <li>Last updated: <span id="time"></span></li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-3">
+              <div class="clearfix weather-temperature">
+                <strong id="temp">23</strong><span id="units">°C</span>
+              </div>
+            </div>
+            <div class="col-3">
+              <img src="" alt="Clear" class="float-left" id="icon" />
+              <div id="description"></div>
+            </div>
           </div>
-        </div>
-        <div class="col">
-          <div class="moom">
-            Moon day <i class="fa-solid fa-moon moon-icon"></i>
-            <br />
-            11
+          <div class="humidity">Humidity: <span id="humid"></span> %</div>
+          <div class="wind">Wind: <span id="speed"></span> km\h</div>
+          <div class="row">
+            <div class="col-6">
+              <div class="sun">
+                sunrise 5:35
+                <br />
+                sunset 20:31
+              </div>
+            </div>
+            <div class="col-6">
+              <div class="day-time">
+                Day's duration:
+                <br />
+                11
+              </div>
+            </div>
           </div>
+          <div class="weather-forecast" id="forecast"></div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col">Tu 24*C <i class="fa-solid fa-cloud-sun"></i></div>
-        <div class="col">
-          Wn 23*C <i class="fa-duotone fa-cloud-sun cloud-icon"></i>
-        </div>
-        <div class="col">Th 27*C <i class="fa-solid fa-sun sun-icon"></i></div>
-        <div class="col">Fr 28*C <i class="fa-solid fa-sun sun-icon"></i></div>
-        <div class="col">St 28*C <i class="fa-solid fa-sun sun-icon"></i></div>
+        <small>
+          <a
+            href="https://github.com/DaryBena/vanilla-weather-app"
+            target="_blank"
+            >Open-source code,</a
+          >
+          by Dary Bena
+        </small>
       </div>
     </div>
     <script src="index.js"></script>
