apdate axios link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       src="https://kit.fontawesome.com/5ebd870a2b.js"
       crossorigin="anonymous"
     ></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
     <title>Weather App</title>
   </head>
   <body>
@@ -69,14 +69,14 @@
           <div class="row">
             <div class="col-6">
               <div class="sun">
-                Sunrise <span id="rise">5:35</span>
+                Sunrise <span id="rise"></span>
                 <br />
-                Sunset <span id="set">20:31</span>
+                Sunset <span id="set"></span>
               </div>
             </div>
             <div class="col-6">
               <div class="day-time">
-                Day's duration: <span id="duration">11</span>
+                Day's duration: <span id="duration"></span>
               </div>
             </div>
           </div>
